css/main.css
/* ... */
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

html {
  font-size: 18px; }

#site {
  font-family: sans-serif;
  font-weight: bold;
  line-height: 1.1em; }
  #site #yield_container {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    overflow-x: hidden;
    overflow-y: scroll;
    max-width: 100vw;
    overflow-x: hidden; }
  #site a:link,
  #site a:visited {
    color: inherit;
    /*text-decoration: none;*/ }
  #site a:hover {
    text-decoration: none; }
  #site video {
    width: 100%; }
  #site img {
    display: inline-block;
    width: 50%; }
  #site .small_type {
    font-size: 0.65rem; }
  #site .reverse {
    text-align: left;
    display: block;
    transform: scale(-1, 1);
    -webkit-transform: scale(-1, 1); }
  #site #zoom_image_container {
    position: fixed;
    top: 50%;
    left: 50%;
    display: block;
    width: 100vw;
    height: 100vh;
    border-left: 10vw solid transparent;
    border-right: 10vw solid transparent;
    border-top: 10vh solid transparent;
    border-bottom: 10vh solid transparent;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    z-index: 100;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    pointer-events: none;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    transition: opacity ease 0.5s;
    background-color: rgba(0, 0, 0, 0.6);
    overflow-y: auto;
    opacity: 0; }
  #site.open {
    overflow-y: hidden; }
    #site.open #zoom_image_container {
      opacity: 1;
      pointer-events: auto; }
      #site.open #zoom_image_container:hover {
        cursor: zoom-out; }

@media (max-width: 1000px) {
  html {
    font-size: 16px; } }
@media (max-width: 900px) {
  html {
    font-size: 16px; } }
#site {
  margin-top: 1.6rem;
  width: 100%;
  overflow-x: hidden; }
  #site .curatorial_statement {
    padding: 4rem 1rem 0.2rem 1rem;
    text-align: justify;
    text-align-last: center;
    background-image: linear-gradient(to right, #fff 35%, #000 65%);
    font-size: 1.8rem;
    line-height: 1.2em; }
    #site .curatorial_statement em {
      font-style: italic; }
  #site .title {
    position: fixed;
    z-index: 20;
    top: 0;
    left: 0;
    right: 0;
    padding-top: 1rem;
    padding-bottom: 0.6rem;
    padding-left: 1rem;
    padding-right: 1rem;
    /*background-color: #fff;*/ }
    #site .title:before {
      content: '';
      position: absolute;
      top: -2rem;
      left: -1rem;
      right: -1rem;
      width: calc(100% + 2rem);
      background-image: linear-gradient(to right, #fff 35%, #000 65%);
      height: 5rem;
      z-index: -10;
      filter: blur(10px);
      -webkit-filter: blur(10px); }
    #site .title h1 {
      display: inline-block;
      /*vertical-align: top;*/
      text-transform: uppercase;
      width: 35%; }
    #site .title h2 {
      display: inline-block;
      /*vertical-align: top;*/
      margin-right: 0.5rem; }
  #site #navigation_container {
    position: relative;
    z-index: 3; }
    #site #navigation_container:after {
      content: '';
      bottom: -2.5rem;
      left: -1rem;
      right: -1rem;
      height: 4rem;
      background-image: linear-gradient(to right, #fff 35%, #000 65%);
      position: absolute;
      z-index: 11;
      filter: blur(10px);
      -webkit-filter: blur(10px); }
  #site #bio_container {
    padding-top: 4rem;
    padding-bottom: 10rem;
    position: relative;
    background-image: linear-gradient(to right, #fff 35%, #000 65%); }
  #site .curators_wrapper {
    display: inline-block;
    vertical-align: top;
    margin-left: 10%;
    margin-right: 30%;
    width: 40%;
    text-align: center; }
    #site .curators_wrapper .white {
      margin-top: 1rem; }
  #site .bios {
    width: 100%; }
  #site .process_link_container {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 35%;
    width: 30%;
    background-image: linear-gradient(to right, #fff, #000); }
  #site .navigation_section {
    padding: 0 1rem;
    box-sizing: border-box;
    display: inline-block;
    vertical-align: top;
    width: 35%;
    padding-top: 4rem; }
    #site .navigation_section.arielle, #site .navigation_section.madeleine {
      margin-left: 30%;
      text-align: right;
      background-color: #000;
      color: #fff; }
  #site #curators,
  #site #site_credits {
    position: absolute;
    width: 30%;
    left: 50%;
    transform: translate(-50%, 0);
    -webkit-transform: translate(-50%, 0);
    text-align: center; }
  #site #curators {
    top: 8rem; }
  #site #site_credits {
    bottom: 10rem;
    font-size: 0.65rem; }
    #site #site_credits .process_sub_section {
      margin-bottom: 0; }
  #site #thank_you_container {
    background-color: #fff;
    padding: 2rem 1rem 3rem 1rem;
    box-sizing: border-box;
    position: relative;
    text-align: center; }
    #site #thank_you_container:before {
      content: '';
      position: absolute;
      top: -4rem;
      left: 0;
      width: 100%;
      height: 4rem;
      background-image: linear-gradient(rgba(255, 255, 255, 0), #fff); }
    #site #thank_you_container img {
      margin: 1.5rem 2rem 0 2rem;
      display: inline-block;
      vertical-align: middle; }
    #site #thank_you_container p {
      padding: 0 18rem;
      box-sizing: border-box;
      -webkit-box-sizing: border-box; }
  #site img#artsns {
    width: 7%; }
  #site img#ccfa {
    width: 20%; }
  #site img#cfat {
    width: 4%; }
  #site img#halifax {
    width: 10%; }

#site #camila .section_heading:before {
  background-color: #ffe69e; }
/* ... */

